# speechtotext-poc

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  catalog-info.yml  pyproject.toml  requirements.txt
data/labels/: train_label_23_11_2023.csv
data/sample/: result-whisper-large-v2.csv  result-whisper-large-v3.csv  result-whisper-ratchada.csv  result-whisper-thonburian.csv
data/sample_output/: Transcript  Oppday CCET.docx  Transcript  Oppday CCET.txt  Transcript Oppday Inter Pharma.docx  Transcript Oppday Inter Pharma.txt  Transcription Digital Roadshow Nirvana.docx  Transcription Digital Roadshow Nirvana.txt  inter_pharma_label_by_best.csv
docs/: README.md  architecture.md  dataflow.md  deployment.md  development.md  troubleshooting.md
docs/features/: evaluation.md  finetuning.md  ingestion.md  tensorboard.md  training_pipeline.md
misc/src/: evaluate_utils.py
misc/src/normalizers/: english.json  english.py
misc/src/post_processer/: post_process.py
misc/utils/: [INT]_finetune_thonburian_whisper.ipynb  check-filesize.ipynb  convert-tsv-mp4-mp3.ipynb  convert-video-to-sound.ipynb  pre-process-dataset.ipynb  prep-set-video.ipynb  prep-set-video.py  tensorboard-monitor.ipynb
notebooks/: demo-ratchada.ipynb  evaluation.ipynb  pre-process-dataset.ipynb  preprocess-dataset.ipynb  words_checker.ipynb
notebooks/pipeline/: ratchada_pipeline.py  ratchada_pipeline_uploader.ipynb
notebooks/pipeline/processor/: __init__.py  english.py  postfix.py  process.py
notebooks/whisper-v3/: .gitignore
notebooks/whisper-v3/colab-version/: 20231120-finetune-whisper-v3 .ipynb  20231120_v2-finetune-whisper-v3 .ipynb
notebooks/whisper-v3/local-version/: 202311121_v1-full-finetune-whisper-v3.ipynb  20231120_v2-finetune-whisper-v3 .ipynb  20231120_v2-finetune-whisper-v3 .py  reset-before-finetune.sh  (+22 more)
src/: evaluate_utils.py
src/post_processer/: __init__.py  post_process.py
(+44 files in other folders)
