[tool.poetry]
name = "set-speechtotext-poc"
version = "0.1.0"
description = ""
authors = ["Best Chokulket <best@thinkingmachin.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
evaluate = "^0.4.1"
pythainlp = "^4.0.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \venv
    | _build
    | buck-out
    | build
    | dist
    | data
  )/
  | foo.py
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
ensure_newline_before_comments = "True"
line_length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
