[tool.poetry]
name = "set-speechtotext-poc"
version = "0.1.0"
description = ""
authors = ["Best Chokulket <best@thinkingmachin.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
jiwer = "^3.0.3"
nltk = "^3.8.1"
deepcut = "^0.7.0.0"
more-itertools = "^10.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
